[package]
name = "pg"
version = "0.1.0"
authors = ["Gary Moore <littlebunch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    diesel = { version = "1.4.5", features = ["postgres","chrono","r2d2"] }
   diesel_full_text_search = "1.0.1"
    chrono ={version= "0.4.13", features=["serde"]}
    csv = "1.1"
    dotenv = "0.15.0"
    env_logger = "0.7.1"
    serde = "1.0"
    serde_derive = "1.0"
    serde_json = "1.0"
    regex = "1.3.9"
[dev-dependencies]
    assert_cmd = "1.0.1"
    predicates = "1.0.5"

